# parrotpy

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: design.md
src/parrotpy/: __init__.py  analyzer.py  core.py  df_analyzer.py  df_builder.py  df_spec.py  function_map.py  main.py  models.py  parrot.py  schema.py  schema_builder.py  stats.py  utils.py
src/parrotpy/code_gen/: column_code_gen.py  entity_map.py
src/parrotpy/functions/: __init__.py  common.py  core.py  faker.py  stats.py
src/parrotpy/generators/: __init__.py  core.py  stats.py
src/parrotpy/inference/: analyzer.py  entity_map.py  inferred_df_spec.py
tests/: conftest.py
tests/helpers/: spark_helpers.py  test_helpers.py
tests/parrotpy/: test.py  test_analyzer.py  test_ast.py  test_code_gen.py  test_common.py  test_core.py  test_df_builder.py  test_df_spec.py  test_faker.py  test_fn_map.py  test_models.py  test_ner.py  test_parrot.py  test_spark_ops.py  test_stats.py  test_utils.py
tests/parrotpy/code_gen/: test_ast.py  test_column_code_gen.py
tests/parrotpy/functions/: test_common.py  test_core.py  test_faker.py  test_fn_core.py  test_spark_ops.py  test_stats.py  test_vibe_coding.py
tests/parrotpy/generators/: test_gen_core.py  test_generator.py
tests/parrotpy/inference/: test_analyzer.py  test_entity_map.py  test_ner.py
